--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <div class="container">
       <div class="starter-template">
         <h1>Haley's HILT Portfolio</h1>
-        <p class="lead"> Welcome! This is a basic template for a portfolio site
-          (built with <a href="https://getbootstrap.com/docs/3.3/">Bootstrap</a>)
-          that we will use to practice our GitHub skills and house the various
-          projects you work on this week.
+        <p class="lead"> Welcome! This is my portfolio
+
+          (built with <a href="https://getbootstrap.com/docs/3.3/">Bootstrap</a>).
+
       </div>
       <div style="text-align: center ">
 
